--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "0.19.0",
+    "firebase": "6.6.2",
     "prop-types": "15.7.2",
     "react": "16.9.0",
     "react-dom": "16.9.0",
