--- a/package.json
+++ b/package.json
@@ -8,11 +8,8 @@
     "prop-types": "15.7.2",
     "react": "16.9.0",
     "react-dom": "16.9.0",
-    "react-redux": "7.1.1",
     "react-router-dom": "5.1.0",
-    "react-scripts": "3.1.1",
-    "redux": "4.0.4",
-    "redux-create-reducer": "2.0.0"
+    "react-scripts": "3.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
